--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html.lang="es">
+<header>
 <head>
 	<meta charset="UTF-8">
 	<center><img src="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Imágenes\Logo unad.png" width="200" height="200"></center> 
@@ -23,37 +24,32 @@
 		background-color:#FBCF9D;
 	}
 	</style>
+
 </head>
+</header>
 <body>
 
-	<div id="header">
-		<ul class="nav">
-			<li>
-			<a href="">Página Inicial</a>
-			</li>
-            <li>
-			<a href="">Clasificación de Amenazas Informáticas</a>
-			</li>
-			<li>
-			<a href="">¿Cuáles Son los Mecanismos de Seguridad Informática?</a>
-			</li>
-			<li>
-			<a href="">Contacto</a>
-			</li>
-			<li>
-			<a href="">Referencias Bibliográficas</a>
-			</li>
+	<nav> 
+		<ul>
+			<li><a href="">Página Inicial</a></li>
+			<li><a href="https://es.wikipedia.org/wiki/Seguridad_inform%C3%A1tica">¿Qué es la Seguridad informática?</a></li>
+            <li><a href="http://recursostic.educacion.es/observatorio/web/en/software/software-general/1040-introduccion-a-la-seguridad-informatica?start=5">Clasificación de Amenazas Informáticas</a></li>
+			<li><a href="http://recursostic.educacion.es/observatorio/web/en/software/software-general/1040-introduccion-a-la-seguridad-informatica?start=2">¿Cuáles Son los Mecanismos de Seguridad Informática?</a></li>
+			<li><a href="http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/bases_de_la_seguridad_informtica.html">¿Cuáles son las bases de la Seguridad Informatica?</a></li>
+			<li><a href="http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/elementos_vulnerables_en_el_sistema_informtico.html">Elementos vulnerables en el Sistema Informático </a></li>
+			<li><a href="">Contacto</a></li>
+			<li><a href="">Referencias Bibliográficas</a></li>
 		</ul>
-	</div>
-	<center><font face="Times New Roman"<font size="20"<font color="#FF3200"<h1>OVI CURSO SEGURIDAD INFORMÁTICA</h1></center></font></font></font>
+	</nav>
 
-	<font face="Times New Roman"<p align=justify>Bienvenidos al OVI del Curso de Seguridad Informática, mediante una forma gráfica e intuitiva podrá aprender de una
-		más sencilla cuales son los aspectos que más afectan a un usuario y a un sistema en un mundo de amenazas.</p></font>
+	<section>
+	<center><font face="Arial"<font size="20"<font color="#FF3200"<h1>OVI CURSO SEGURIDAD INFORMÁTICA</h1></center></font></font></font>
+
+	<font face="Arial"<p align=justify>Bienvenidos al OVI del Curso de Seguridad Informática, mediante una forma gráfica e intuitiva podrá aprender de una manera más sencilla cuales son los aspectos que más afectan a un usuario y a un sistema en un mundo de amenazas.</p></font>
 <ul>
 
 	<li>
-		<font face="Times New Roman"<p align=justify>Objetivo General del OVI del Curso: Crear un OVI sobre seguridad informática con el fin de dar a conocer la importancia que tienen
-		   las bases y mecanismos de la seguridad informática y de la información.</p></font>
+		<font face="Arial"<p align=justify>Objetivo General del OVI del Curso: Crear un OVI sobre seguridad informática con el fin de dar a conocer la importancia que tienen las bases y mecanismos de la seguridad informática y de la información.</p></font>
 	</li>
 
 	<p>Objetivos Específicos del OVI del Curso:</p>
@@ -73,32 +69,32 @@
 
 	<p>Objetivo de la Sección:</p>
 
-	<font face="Times New Roman"<p align=justify>El objetivo de esta sección tiene como finalidad dar a conocer el concepto de seguridad informática a traves de
+	<font face="Arial"<p align=justify>El objetivo de esta sección tiene como finalidad dar a conocer el concepto de seguridad informática a traves de
 	   un artículo y un video que nos permitirán entender mejor de que trata la seguridad informática.</p></font>
 
-	<font face="Times New Roman"<p>¿Qué es la Seguridad Informática?</p></font>
+	<font face="Arial"<p>¿Qué es la Seguridad Informática?</p></font>
 
-	<font face="Times New Roman"<p align=justify>La seguridad informática, es el área relacionada con la informática y la telemática que se enfoca en la protección
+	<font face="Arial"<p align=justify>La seguridad informática, es el área relacionada con la informática y la telemática que se enfoca en la protección
 		de la arquitectura computacional y todo lo relacionado con esto y especialmente la información guardada en un computador o circulante en la red de computadores de una casa o una empresa. Para ello existen una serie de estándares,
 		protocolos, métodos, herramientas y leyes concebidas para minimizar los posibles riesgos a la infraestructura o la
 		información. La ciberseguridad comprende software, hardware, redes de computadores y todo lo que la corporación
 		valore y signifique un riesgo si esta información confidencial llega a manos de otras personas.</p></font>
 
-		<font face="Times New Roman"<p>Para Más Información Ingrese al Siguiente Enlace:</p></font>
+		<font face="Arial"<p>Para Más Información Ingrese al Siguiente Enlace:</p></font>
     <a href="https://es.wikipedia.org/wiki/Seguridad_inform%C3%A1tica">Seguridad Informática</a>
 
-    <font face="Times New Roman"<p>Mediante los siguientes vídeos podrá entender más fácilmente sobre el tema ¿Que es la Seguridad Informática?</p></font>
+    <font face="Arial"<p>Mediante los siguientes vídeos podrá entender más fácilmente sobre el tema ¿Que es la Seguridad Informática?</p></font>
     <a href="https://www.youtube.com/watch?v=KiuTyXehW-8">Seguridad Informática</a>
     <a href="https://www.youtube.com/watch?v=Nxns7cqfMsg&t=2s">Hackers</a>
 
-     <font face="Times New Roman"<p>Objetivo de la Sección:</p></font>
+     <font face="Arial"<p>Objetivo de la Sección:</p></font>
 
-    <font face="Times New Roman"<p align=justify>El objetivo de esta sección es dar a conocer a través de un texto cuales son las bases de la seguridad informática
+    <font face="Arial"<p align=justify>El objetivo de esta sección es dar a conocer a través de un texto cuales son las bases de la seguridad informática
        y en que consisten cada una de ellas.</p></font>
 
-    <font face="Times New Roman"<p>¿Cuáles son las bases de la seguridad informática?</p></font>
+    <font face="Arial"<p>¿Cuáles son las bases de la seguridad informática?</p></font>
 
-    <font face="Times New Roman"<p align=justify>
+    <font face="Arial"<p align=justify>
     	La seguridad consiste en mantener el equilibrio adecuado los siguientes cuatro factores. No tendría sentido conseguir
     	la confidencialidad para un archivo si es a toda costa el administrador autorizado del equipo tenga acceso a el.
 
@@ -108,21 +104,39 @@
     	<li>
     		1. Fiabilidad
     	</li>
-
     	<li>
     		2. Confidencialidad
     	</li>
-
     	<li>
     		3. Integridad
     	</li>
-
     	<li>
     		4. Disponibilidad
-    	</li>
+    	</li>	
     </ul>
 
-     <font face="Times New Roman"<p>Para Más Información Ingrese al Siguiente Enlace:</p></font>
-    <a href="http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/bases_de_la_seguridad_informtica.html">Bases de la Seguridad Informática</a>
+     <font face="Arial"<p>Para Más Información Ingrese a los Siguientes Enlaces:</p></font>
+    <ul>
+    	<li>
+             1. <a href="http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/bases_de_la_seguridad_informtica.html">Bases de la Seguridad Informática</a>
+        </li>
+
+        <li>
+              2. <a href="https://www.youtube.com/watch?v=ZPSulZ1QkMo">Tipos de Amenazas Informáticas</a>
+        </li>
+    </ul>
+    </center>
+    </section>
+
+    <aside>
+    	<left><img src="img.Bases.Seg.Informatica.png" width="200" height="200"></left> 
+    </aside>
+
+    <footer>
+
+    	<h3><center>Pagina web diseñada por el grupo 66</center></h3>
+
+    </footer>
+
 </body>
 </html>
