--- a/index.html
+++ b/index.html
@@ -2,77 +2,72 @@
 <html.lang="es">
 <head>
 	<meta charset="UTF-8">
-	<center><img src="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Imágenes\Logo unad.png" width="200" height="200"></center> 
+	<meta content="Daniel Eduardo Garzón Müller" name="author">
+	<meta content="OVI Seguridad Informática" name="Keywords">
+	<center><img src="Imágenes/Logo Unad.png"widht="200" height="200"></center>
 	<title>OVI Del Curso Seguridad Informática 204-020</title>
-	<style type="text/css">
-		
-	ul, ol{
-	list-style: none;	
-	}
-
-	. <center>nav li a {
-		background-color: #9DB0FB;
-		color: #FCFDFF;
-		text-decoration:none;
-		padding: 10px 15px;</center>
-	}
-
-	</style>
-	<style type="text/css">
-	body{
-		background-color:#FBCF9D;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
-	<div id="header">
-		<ul class="nav">
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\index.html">Página Inicial</a>
-			</li>
-			<li>
-				<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Seguridad Informática.html">Seguridad Informática</a>
-			</li>
-            <li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Clasificación de Amenazas Informáticas.html">Clasificación de Amenazas Informáticas</a>
-			</li>
-			<li>
-			<a href="">¿Cuáles Son los Mecanismos de Seguridad Informática?</a>
-			</li>
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Contacto.html">Contacto</a>
-			</li>
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Referencias Bibliográficas.html">Referencias Bibliográficas</a>
-			</li>
-		</ul>
-	</div>
-	<center><font face="Times New Roman"<font size="20"<font color="#FF3200"<h1>OVI CURSO SEGURIDAD INFORMÁTICA 204-020</h1></center></font></font></font>
+	<div id="Contenido">
+		<header>
+			<h1>OVI CURSO SEGURIDAD INFORMÁTICA 204-020</h1>
+		</header>
 
-	<font face="Times New Roman"<p align=justify>Bienvenidos al OVI del Curso de Seguridad Informática, mediante una forma gráfica e intuitiva podrá aprender de una
-		más sencilla cuales son los aspectos que más afectan a un usuario y a un sistema en un mundo de amenazas.</p></font>
-<ul>
+		<nav>
+			<ul>
+				<li class="menu"><a href="index.html">Página Inicial</a></li>
+				<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
+				<li class="menu"><a href="">Clasificación de las Amenazas Informáticas</a></li>
+				<li class="menu"><a href="Contacto.html">Contacto</a></li>
+				<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
+			</ul>
+		</nav>
 
-	<li>
-		<font face="Times New Roman"<p align=justify>Objetivo General del OVI del Curso: Crear un OVI sobre seguridad informática con el fin de dar a conocer la importancia que tienen
-		   las bases y mecanismos de la seguridad informática y de la información.</p></font>
-	</li>
+		<section>
+			<article>
+				<h2>Bienvenidos al OVI del Curso de Seguridad Informática.</h2>
+				<img src="Imágenes/Seguridad.png" widht="400" height="300">
+				<p>Mediante una forma gráfica e intuitiva podrá aprender de una más sencilla cuales son los aspectos que más afectan a un usuario y a un sistema en un mundo de amenazas.</p>
 
-	<p>Objetivos Específicos del OVI del Curso:</p>
+			<article>
+				<h3>Objetivo General del OVI del Curso.</h3>
+				<p>Crear un OVI sobre seguridad informática con el fin de dar a conocer la importancia que tienen las bases y mecanismos de la seguridad informática y de la información.</p>
+			</article>
 
-	<li>
+			<article>
+				<h4>Objetivos Específicos del OVI del Curso:</h4>
+
+	<p>
 		Identificar las Vulnerabilidades de un Sistema Informático.
-	</li>
+	</p>
 
-	<li>
+	<p>
 	    Conocer los Diferentes Tipos de Amenazas que Pueden Afectar un Sistema Informático.
-	</li>
+	</p>
 
-	<li>
+	<p>
 	   	Aprender a Proteger el Sistema Informático para así mismo Proteger la Información.
-	</li>
-	</ul>
+	</p>
+	
+	</article>
 
+		</section>
+
+		<aside>
+			<center>
+			<a class="twitter-timeline" data-lang="es" data-width="400" data-heigth="100" data-dnt="true" data-theme="light" data-link-color="2B7BB9" href="https//twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
+			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
+			</script>
+
+		<footer>
+			<h5>Página Web Creada Por: Daniel Eduardo Garzón Müller Grupo: 66 Diseño de Sitios Web</h5>
+			<h6>Contador de Visitas</h6>
+			<center><a href="https://www.contadorvisitasgratis.com" title="contador de visitas para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=dfq6dxzuskwhxx9s7ey3r3ab31zyjs95" border="0" title="contador de visitas para blogger" alt="contador de visitas para blogger"></a></center>
+			</aside>
+		</footer>
+</div>
 </body>
 </html>
