--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<section>
 			<article>
 				<h2>Bienvenidos al OVI del Curso de Seguridad Informática.</h2>
-				<img src="Imágenes/Seguridad.png" widht="400" height="300">
+				<center><img src="Imágenes/Seguridad.png" widht="400" height="300"></center>
 				<p>Mediante una forma gráfica e intuitiva podrá aprender de una más sencilla cuales son los aspectos que más afectan a un usuario y a un sistema en un mundo de amenazas.</p>
 
 			<article>
@@ -58,15 +58,19 @@
 
 		<aside>
 			<center>
-			<a class="twitter-timeline" data-lang="es" data-width="400" data-heigth="100" data-dnt="true" data-theme="light" data-link-color="2B7BB9" href="https//twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
-			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
-			</script>
+				<font><font color="#004669"<p>Nuestra Universidad en Twitter</p></font>
+				<br>
+			<a class="twitter-timeline" data-width="400" data-height="800" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            <br>
+
+            <h6>Contador de Visitas</h6>
+			<a href="https://www.contadorvisitasgratis.com" title="contador de visitas para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=dfq6dxzuskwhxx9s7ey3r3ab31zyjs95"></a>
+			</center>
+		</aside>
 
 		<footer>
 			<h5>Página Web Creada Por: Daniel Eduardo Garzón Müller Grupo: 66 Diseño de Sitios Web</h5>
-			<h6>Contador de Visitas</h6>
-			<center><a href="https://www.contadorvisitasgratis.com" title="contador de visitas para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=dfq6dxzuskwhxx9s7ey3r3ab31zyjs95" border="0" title="contador de visitas para blogger" alt="contador de visitas para blogger"></a></center>
-			</aside>
 		</footer>
 </div>
 </body>
