--- a/Referencias Bibliográficas.html
+++ b/Referencias Bibliográficas.html
@@ -2,70 +2,85 @@
 <html.lang="es">
 <head>
 	<meta charset="UTF-8">
+	<meta content="Daniel Eduardo Garzón Müller" name="author">
+	<meta content="Referencias Bibliográficas" name="Keywords">
+	<center><img src="Imágenes/Logo Unad.png"widht="200" height="200"></center>
 	<title>Referencias Bibliográficas</title>
-	<style type="text/css">
-		
-	ul, ol{
-	list-style: none;	
-	}
-
-	. <center>nav li a {
-		background-color: #9DB0FB;
-		color: #FCFDFF;
-		text-decoration:none;
-		padding: 10px 15px;</center>
-	}
-
-	</style>
-	<style type="text/css">
-	body{
-		background-color:#C2DFFE;
-	}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-<div id="header">
-		<ul class="nav">
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\index.html">Página Inicial</a>
-			</li>
-			<li>
-				<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Seguridad Informática.html">Seguridad Informática</a>
-			</li>
-            <li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Clasificación de Amenazas Informáticas.html">Clasificación de Amenazas Informáticas</a>
-			</li>
-			<li>
-			<a href="">¿Cuáles Son los Mecanismos de Seguridad Informática?</a>
-			</li>
-			<li>
-			<a href="">Contacto</a>
-			</li>
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Referencias Bibliográficas.html">Referencias Bibliográficas</a>
-			</li>
-		</ul>
-	</div>
-	<center><font face="Times New Roman"<font size="20"<font color="#FF3200"<h1>REFERENCIAS BIBLIOGRÁFICAS</h1></center></font></font></font>
-	<ul>
-		<li>
-			<p>Wikipedia.org (Septiembre 2017). Seguridad informática.</p>
-		</li>
-		<li>
-			<p>Colegio secundario don Bosco. (Noviembre 2010). Seguridad informática.</p>
-		</li>
-		<li>
-			<p>Bases de la seguridad informática (2017).</p>
-		</li>
-		<li>
-			<p>Mifsud, M. (marzo 2012). Introducción a la seguridad informática.</p>
-		</li>
-		<li>
-			<p>Mifsud, M. (marzo 2012). Introducción a la seguridad informática.</p>
-		</li>
-		<li>
-			<p>Novedades informáticas (julio 2017) mecanismos preventivos de seguridad informática.</p>
-		</li>
-	</ul>
-</body>
+	<div id="Contenido">
+		<header>
+			<h1>REFERENCIAS BIBLIOGRÁFICAS</h1>
+		</header>
+
+		<nav>
+			<ul>
+				<li class="menu"><a href="index.html">Página Inicial</a></li>
+				<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
+				<li class="menu"><a href="Clasificación de Amenazas Informáticas.html">Clasificación de las Amenazas Informáticas</a></li>
+				<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
+			</ul>
+		</nav>
+
+	<section>
+		<article>
+			<p>UNAD - La universidad para la paz perdurable - YouTube. (2017). Youtube.com. Recuperado de: https://www.youtube.com/embed/eewAV7egIfY</p>
+		</article>
+
+		<article>
+			<p>Conoce la oferta académica de la UNAD y sus programas nuevos para este 2016 - Youtube. (2016). Recuperado de: https://www.youtube.com/embed/Z69z2ODm9ts</p>
+		</article>
+
+		<article>
+			<p>Tipos de amenazas informáticas - windsofthesky.wordpress.com. (2008) - windsofthesky.wordpress.com. Recuperado de: https://windsofthesky.wordpress.com/2008/07/11/tipos-de-amenazas-informaticas </p>
+		</article>
+
+		<article>
+			<p>Tipos de Amenazas-Malware - Youtube. (2017). Youtube.com. Recuperado de: https://www.youtube.com/embed/xApsVQVcuKo</p>
+		</article>
+
+		<article>
+			<p>Seguridad Informática - Es.Wikipedia. (2017). Wikipedia.org. Recuperado de: https://es.wikipedia.org/wiki/Seguridad_inform%C3%A1tica</p>	
+		</article>
+
+		<article>
+			<p>Bases de la Seguridad Informática - Descargas.pntic.mec.es. (2017). Recuperado de: http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/bases_de_la_seguridad.html</p>
+		</article>
+
+		<article>
+			<p>Seguridad Informática en Internet - Youtube - (2017). Recuperado de: https://www.youtube.com/embed/QVymjGfoHjY </p>
+		</article>
+
+		<article>
+			<p>Seguridad Informática - Youtube - (2017). Recuperado de: https://www.youtube.com/embed/Nxns7cqfMsg</p>
+		</article>
+
+		<article>
+			Logo UNAD.png - Universidad Nacional Abierta y a Distancia - (2017). Recuperado de: www.unad.edu.co
+		</article>
+
+	</section>
+
+	<aside>
+		<center>
+				<font><font color="#004669"<p>Nuestra Universidad en Twitter</p></font>
+				<br>
+			<a class="twitter-timeline" data-width="400" data-height="800" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            <br>
+
+            <h6>Contador de Visitas</h6>
+			<a href="https://www.contadorvisitasgratis.com" title="contador de visitas para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=dfq6dxzuskwhxx9s7ey3r3ab31zyjs95"></a>
+			</center>
+	</aside>
+
+<footer>
+<h2>Página Web Creada Por: Daniel Eduardo Garzón Müller Grupo: 66 Diseño de Sitios Web</h2>
+</footer>
+	
+</div>	
+</body>	
 </html>
