--- a/Seguridad Informática.html
+++ b/Seguridad Informática.html
@@ -1,109 +1,78 @@
-<html>
 <!DOCTYPE html>
 <html.lang="es">
 <head>
-<meta charset="UTF-8">
-<center><img src="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Imágenes\Seguridad.jpg" width="300" height="200"></center> 
-<title>Seguridad Informática</title>
-	<style type="text/css">
-		
-	ul, ol{
-	list-style: none;	
-	}
-
-	. <center>nav li a {
-		background-color: #9DB0FB;
-		color: #FCFDFF;
-		text-decoration:none;
-		padding: 10px 15px;</center>
-	}
-
-	</style>
-	<style type="text/css">
-	body{
-		background-color:#DDC2FE;
-	}
-	</style>
+	<meta charset="UTF-8">
+	<meta content="Daniel Eduardo Garzón Müller" name="author">
+	<meta content="OVI Seguridad Informática" name="Keywords">
+	<center><img src="Imágenes/Logo Unad.png"widht="200" height="200"></center>
+	<title>¿Qué Es La Seguridad Informática?</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
 
-	<div id="header">
-		<ul class="nav">
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\index.html">Página Inicial</a>
-			</li>
-			<li>
-				<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Seguridad Informática.html">Seguridad Informática</a>
-			</li>
-            <li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Clasificación de Amenazas Informáticas.html">Clasificación de Amenazas Informáticas</a>
-			</li>
-			<li>
-			<a href="">¿Cuáles Son los Mecanismos de Seguridad Informática?</a>
-			</li>
-			<li>
-			<a href="">Contacto</a>
-			</li>
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Referencias Bibliográficas.html">Referencias Bibliográficas</a>
-			</li>
-		</ul>
-	</div>
-	<center><font face="Times New Roman"<font size="20"<font color="#FF3200"<h1>SEGURIDAD INFORMÁTICA</h1></center></font></font></font>
+<div id="Contenido">
+<header>
+	<h1>¿QUÉ ES LA SEGURIDAD INFORMÁTICA?</h1>
+</header>
 
-	<p>Objetivo de la Sección:</p>
+<nav>
+	<ul>
+		<li class="menu"><a href="index.html">Página Inicial</a></li>
+		<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
+		<li class="menu"><a href="Clasificación de Amenazas Informáticas.html">Clasificación de las Amenazas Informáticas</a></li>
+		<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
+	</ul>
+</nav>
 
-	<font face="Times New Roman"<p align=justify>El objetivo de esta sección tiene como finalidad dar a conocer el concepto de seguridad informática a traves de
-	   un artículo y un video que nos permitirán entender mejor de que trata la seguridad informática.</p></font>
+<section>
+<article>
+	<h2>Objetivo de la Sección:</h2>
+	<center><img src="Imágenes/Seguridad.jpg" widht="400" height="300"></center>
+	<p>El objetivo de esta sección tiene como finalidad dar a conocer el concepto de seguridad informática a traves de
+	   un artículo y un video que nos permitirán entender mejor de que trata la seguridad informática.</p>
+</article>
 
-	<font face="Times New Roman"<p>¿Qué es la Seguridad Informática?</p></font>
+<article>
+	<h3>¿Qué es la Seguridad Informática?</h3>
 
-	<font face="Times New Roman"<p align=justify>La seguridad informática, es el área relacionada con la informática y la telemática que se enfoca en la protección
-		de la arquitectura computacional y todo lo relacionado con esto y especialmente la información guardada en un computador o circulante en la red de computadores de una casa o una empresa. Para ello existen una serie de estándares,
-		protocolos, métodos, herramientas y leyes concebidas para minimizar los posibles riesgos a la infraestructura o la
-		información. La ciberseguridad comprende software, hardware, redes de computadores y todo lo que la corporación
-		valore y signifique un riesgo si esta información confidencial llega a manos de otras personas.</p></font>
+	<p>Antes de poder comprender los temas que se van a presentar es necesario leer y tener en cuenta todo lo que tiene que ver con la Seguridad Informática, mediante las siguiente lectura.</p>
+	<center><iframe width="500" height="500" src="https://es.wikipedia.org/wiki/Seguridad_inform%C3%A1tica"></iframe></center>
+</article>
 
-		<font face="Times New Roman"<p>Para Más Información Ingrese al Siguiente Enlace:</p></font>
-    <a href="https://es.wikipedia.org/wiki/Seguridad_inform%C3%A1tica">Seguridad Informática</a>
+<article>
+	<h4>¿Cuáles Son las Bases de la Seguridad Informática?</h4>
 
-    <font face="Times New Roman"<p>Mediante los siguientes vídeos podrá entender más fácilmente sobre el tema ¿Que es la Seguridad Informática?</p></font>
-    <a href="https://www.youtube.com/watch?v=KiuTyXehW-8">Seguridad Informática</a>
-    <a href="https://www.youtube.com/watch?v=Nxns7cqfMsg&t=2s">Hackers</a>
+	<p>Este apartado es de gran importancia porque aquí se mencionan los pilares más relevantes o mas importantes de la Seguridad Informática, mediante la siguiente lectura.</p>
+	<center><iframe width="450" height="450" src="http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/bases_de_la_seguridad_informtica.html"></iframe></center>
+</article>
 
-     <font face="Times New Roman"<p>Objetivo de la Sección:</p></font>
+<article>
+	<h5>Videos Explicativos del Tema:</h5>
 
-    <font face="Times New Roman"<p align=justify>El objetivo de esta sección es dar a conocer a través de un texto cuales son las bases de la seguridad informática
-       y en que consisten cada una de ellas.</p></font>
+	<p>Mediante los siguientes vídeos podrá entender más fácilmente sobre el tema ¿Que es la Seguridad Informática?</p>
+	<center><iframe width="400" height="200" src="https://www.youtube.com/embed/QVymjGfoHjY" frameborder="0" gesture="media" allowfullscreen></iframe></center>
+	<center><iframe width="400" height="200" src="https://www.youtube.com/embed/Nxns7cqfMsg" frameborder="0" gesture="media" allowfullscreen></iframe></center>
+</article>
+</section>
 
-    <font face="Times New Roman"<p>¿Cuáles son las bases de la seguridad informática?</p></font>
+<aside>
+			<center>
+				<font><font color="#004669"<p>Nuestra Universidad en Twitter</p></font>
+				<br>
+			<a class="twitter-timeline" data-width="400" data-height="800" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-    <font face="Times New Roman"<p align=justify>
-    	La seguridad consiste en mantener el equilibrio adecuado los siguientes cuatro factores. No tendría sentido conseguir
-    	la confidencialidad para un archivo si es a toda costa el administrador autorizado del equipo tenga acceso a el.
+            <br>
 
-    	Dependiendo al entorno de trabajo y las necesidades se puede dar prioridad a un aspecto de la seguridad que a otro.</p></font>
+            <h6>Contador de Visitas</h6>
+			<a href="https://www.contadorvisitasgratis.com" title="contador de visitas para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=dfq6dxzuskwhxx9s7ey3r3ab31zyjs95"></a>
+			</center>
+		</aside>
 
-    <ul>
-    	<li>
-    		1. Fiabilidad
-    	</li>
-
-    	<li>
-    		2. Confidencialidad
-    	</li>
-
-    	<li>
-    		3. Integridad
-    	</li>
-
-    	<li>
-    		4. Disponibilidad
-    	</li>
-    </ul>
-
-     <font face="Times New Roman"<p>Para Más Información Ingrese al Siguiente Enlace:</p></font>
-    <a href="http://descargas.pntic.mec.es/mentor/visitas/demoSeguridadInformatica/bases_de_la_seguridad_informtica.html">Bases de la Seguridad Informática</a>
-
+		<footer>
+			<h6>Página Web Creada Por: Daniel Eduardo Garzón Müller Grupo: 66 Diseño de Sitios Web</h6>
+		</footer>
+</div>
 </body>
 </html>
