--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 			<ul>
 				<li class="menu"><a href="index.html">Página Inicial</a></li>
 				<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
-				<li class="menu"><a href="">Clasificación de las Amenazas Informáticas</a></li>
-				<li class="menu"><a href="Contacto.html">Contacto</a></li>
+				<li class="menu"><a href="Clasificación de Amenazas Informáticas.html">Clasificación de las Amenazas Informáticas</a></li>
 				<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
 			</ul>
 		</nav>
@@ -29,8 +28,9 @@
 		<section>
 			<article>
 				<h2>Bienvenidos al OVI del Curso de Seguridad Informática.</h2>
-				<center><img src="Imágenes/Seguridad.png" widht="400" height="300"></center>
+				
 				<p>Mediante una forma gráfica e intuitiva podrá aprender de una más sencilla cuales son los aspectos que más afectan a un usuario y a un sistema en un mundo de amenazas.</p>
+			</article>
 
 			<article>
 				<h3>Objetivo General del OVI del Curso.</h3>
@@ -52,6 +52,13 @@
 	   	Aprender a Proteger el Sistema Informático para así mismo Proteger la Información.
 	</p>
 	
+	</article>
+
+	<article>
+			<p>En el Siguiente Video Podrá Aprender Sobre la Universidad Nacional Abierta y a Distancia "UNAD"</p>
+			<center><iframe width="586" height="568" src="https://www.youtube.com/embed/eewAV7egIfY" frameborder="0" gesture="media" allowfullscreen></iframe></center>
+			<p>En el Siguiente Video Podrá Encontrar Todas las Carreras Profesionales que Tiene la Universidad Nacional Abierta y a Distancia "UNAD"</p>
+			<center><iframe width="586" height="586" src="https://www.youtube.com/embed/Z69z2ODm9ts" frameborder="0" gesture="media" allowfullscreen></iframe></center>
 	</article>
 
 		</section>
