--- a/Clasificación de Amenazas Informáticas.html
+++ b/Clasificación de Amenazas Informáticas.html
@@ -3,88 +3,90 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta content="Daniel Eduardo Garzón Müller" name="author">
+	<meta content="Clasificación de Amenazas Informáticas" name="keywords">
+	<center><img src="Imágenes/Logo Unad.png"widht="200" height="200"></center>
 	<title>Clasificación de Amenazas Informáticas</title>
-	<center><img src="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Imágenes\Amenazas.jpg"></center>
-	<style type="text/css">
-		
-	ul, ol{
-	list-style: none;	
-	}
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">	
+	</head>
 
-	. <center>nav li a {
-		background-color: #9DB0FB;
-		color: #FCFDFF;
-		text-decoration:none;
-		padding: 10px 15px;</center>
-	}
-
-	</style>
-	<style type="text/css">
-	body{
-		background-color:#FED2C2;
-	}
-	</style>
-</head>
 <body>
-	<div id="header">
-		<ul class="nav">
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\index.html">Página Inicial</a>
-			</li>
-			<li>
-				<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Seguridad Informática.html">Seguridad Informática</a>
-			</li>
-            <li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Clasificación de Amenazas Informáticas.html">Clasificación de Amenazas Informáticas</a>
-			</li>
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Clasificación de Amenazas Informáticas.html">¿Cuáles Son los Mecanismos de Seguridad Informática?</a>
-			</li>
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Contacto.html">Contacto</a>
-			</li>
-			<li>
-			<a href="C:\Users\Daniel PC\Documents\GitHub\OVI-Curso-Seguridad-Informatica-Grupo-66\Referencias Bibliográficas.html">Referencias Bibliográficas</a>
-			</li>
-		</ul>
+
+	<div id="Contenido">
+		<header>
+			<h1>CLASIFICACIÓN DE AMENAZAS INFORMÁTICAS</h1>
+		</header>
+
+		<nav>
+			<ul>
+				<li class="menu"><a href="index.html">Página Inicial</a></li>
+				<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
+				<li class="menu"><a href="">Clasificación de las Amenazas Informáticas</a></li>
+				<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
+			</ul>
+		</nav>
 	</div>
+	
+<section>
 
-<center><font face="Times New Roman"<font size="20"<font color="#FF3200"<h1>CLASIFICACIÓN DE LAS AMENAZAS INFORMÁTICAS</h1></center></font></font></font>
-<font face="Times New Roman"<p align=justify>Objetivo General: El objetivo de esta sección es dar a conocer los diferentes tipos de amenazas que afectan a la
-		seguridad informática a través de un texto y un video explicativo sobre el tema en cuestión.</font></p>
+<h2>CLASIFICACIÓN DE LAS AMENAZAS INFORMÁTICAS</h2>
+<center><img src="Imágenes/Amenazas.jpg" widht="400" height="300"></center>
+<article>
+<p align=justify>Objetivo General: El objetivo de esta sección es dar a conocer los diferentes tipos de amenazas que afectan a la
+		seguridad informática a través de un texto y un video explicativo sobre el tema en cuestión.</p>
+</article>
 
-<p>Las amenazas informáticas se pueden clasificar de la siguiente forma:</p>
-<ul>
-	<li>
-		<p>Amenazas Físicas: Dentro de las ámenazas físicas se pueden comprender cualquier daño o error en el hardware que se puede presentar en cualquier momento.
-		Como lo puede ser: fallos en el disco duro, errores de memoria y fallos en procesador. Lo cual hace que la información no se valide correctamente.</p>
-	</li>
-	<li>
-		<p>Amenazas Lógicas: Es el punto más débil de un sistema informático son las personas relacionadas en mayor o menor medida con el. Puede ser la inexperiencia o la falta de preparación, o llegar a ataques intencionados propiamente, simplemente sucesos accidentales. Los cuales hay que prevenir.</p>
-	</li>
-</ul>
+<article>
+<p>Para poder comprender y trabajar sobre las Amenazas Informáticas, se debe leer la siguiente fuente reglamentaria u obligatoria que habla de la Clasificación de las Amenazas Informáticas:</p>
+<center><iframe width="500" height="500" src="https://windsofthesky.wordpress.com/2008/07/11/tipos-de-amenazas-informaticas/"></iframe></center>
 
+<p align=left>Las amenazas informáticas se pueden clasificar de la siguiente forma:</p>
+
+<p align=justify>Amenazas Físicas: Dentro de las ámenazas físicas se pueden comprender cualquier daño o error en el hardware que se puede presentar en cualquier momento.
+Como lo puede ser: fallos en el disco duro, errores de memoria y fallos en procesador. Lo cual hace que la información no se valide correctamente.</p>
+	
+<p align=justify>Amenazas Lógicas: Es el punto más débil de un sistema informático son las personas relacionadas en mayor o menor medida con el. Puede ser la inexperiencia o la falta de preparación, o llegar a ataques intencionados propiamente, simplemente sucesos accidentales. Los cuales hay que prevenir.</p>
+</article>
+
+<article>
 <p>Podemos además agregar que las amenazas como físicas y lógicas, son materializadas por:</p>
-<ul>
-	<li>
-		Personas
-	</li>
-	<li>
-		Programas Específicos
-	</li>
-	<li>
-		Catástrofes Naturales
-	</li>	
-</ul>
 
-<p>Para mayor información sobre las Amenazas Informaticas Ingrese los Siguientes Enlaces:</p>
-<ul>
-	<li>
-		<a href="http://recursostic.educacion.es/observatorio/web/en/software/software-general/1040-introduccion-a-la-seguridad-informatica?start=5">Introducción a la Seguridad Informática</a>
-	</li>
-	<li>
-		<a href="https://www.youtube.com/watch?v=xApsVQVcuKo">Tipos de Amenazas Informáticas</a>
-	</li>
-</ul>
+<center><p>Personas</p></center>
+<center><p>Programas Específicos</p></center>
+<center><p>Catástrofes Naturales</p></center>
+</article>
+
+<article>
+<p>Para mayor información sobre las Amenazas Informaticas Visualize el Siguiente Video:</p>
+
+<p>Tipos de Amenazas Informáticas:</p>
+<br>
+<center><iframe width="400" height="200" src="https://www.youtube.com/embed/xApsVQVcuKo" frameborder="" gesture="media" allowfullscreen></iframe></center>
+</article>
+
+</section>
+
+</body>
+</html>
+
+<aside>
+	<center>
+<font><font color="#004669"<p>Nuestra Universidad en Twitter</p></font>
+				<br>
+			<a class="twitter-timeline" data-width="400" data-height="800" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            <br>
+
+            <h3>Contador de Visitas</h3>
+			<a href="https://www.contadorvisitasgratis.com" title="contador de visitas para blogger"><img src="https://counter8.freecounter.ovh/private/contadorvisitasgratis.php?c=dfq6dxzuskwhxx9s7ey3r3ab31zyjs95"></a>
+			</center>
+</aside>
+
+<footer>
+<h4>Página Web Creada Por: Daniel Eduardo Garzón Müller Grupo: 66 Diseño de Sitios Web</h4>
+</footer>
+</div>
+
 </body>
 </html>
