--- a/Clasificación de Amenazas Informáticas.html
+++ b/Clasificación de Amenazas Informáticas.html
@@ -22,8 +22,9 @@
 			<ul>
 				<li class="menu"><a href="index.html">Página Inicial</a></li>
 				<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
-				<li class="menu"><a href="">Clasificación de las Amenazas Informáticas</a></li>
+				<li class="menu"><a href="Clasificación de Amenazas Informáticas">Clasificación de las Amenazas Informáticas</a></li>
 				<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
+				<li class="menu"><a href="Contacto.html">Contacto</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -64,6 +65,17 @@ Como lo puede ser: fallos en el disco duro, errores de memoria y fallos en proce
 <br>
 <center><iframe width="400" height="200" src="https://www.youtube.com/embed/xApsVQVcuKo" frameborder="" gesture="media" allowfullscreen></iframe></center>
 </article>
+
+<article>
+	<p>Las siguientes Actividades están planeadas para evaluar el conocimiento adquirido en las lecturas realizadas y en la visualización de los videos correspondientes a la Clasificación de Amenazas Informáticas.</p>
+</article>
+<article>
+	<p>Estás Actividades se descargarán automáticamente al computador para ser diligenciadas y se deben entregar al Tutor asignado.</p>
+</article>
+<article>
+<center><iframe src="Actividades/Actividad Clasificación de las Amenazas Informáticas.docx"></iframe></center>
+</article>
+</section>
 
 </section>
 
