--- a/Seguridad Informática.html
+++ b/Seguridad Informática.html
@@ -23,6 +23,7 @@
 		<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
 		<li class="menu"><a href="Clasificación de Amenazas Informáticas.html">Clasificación de las Amenazas Informáticas</a></li>
 		<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
+		<li class="menu"><a href="Contacto.html">Contacto</a></li>
 	</ul>
 </nav>
 
@@ -54,6 +55,16 @@
 	<p>Mediante los siguientes vídeos podrá entender más fácilmente sobre el tema ¿Que es la Seguridad Informática?</p>
 	<center><iframe width="400" height="200" src="https://www.youtube.com/embed/QVymjGfoHjY" frameborder="0" gesture="media" allowfullscreen></iframe></center>
 	<center><iframe width="400" height="200" src="https://www.youtube.com/embed/Nxns7cqfMsg" frameborder="0" gesture="media" allowfullscreen></iframe></center>
+</article>
+
+<article>
+	<p>Las siguientes Actividades están planeadas para evaluar el conocimiento adquirido en las lecturas realizadas y en la visualización de los videos correspondientes a la Seguridad Informática.</p>
+</article>
+<article>
+	<p>Estás Actividades se descargarán automáticamente al computador para ser diligenciadas y se deben entregar al Tutor asignado.</p>
+</article>
+<article>
+<center><iframe src="Actividades/Actividad Qué es la Seguridad Informática.docx"></iframe></center>
 </article>
 </section>
 
