--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<li class="menu"><a href="Seguridad Informática.html">¿Que es la Seguridad Informática?</a></li>
 				<li class="menu"><a href="Clasificación de Amenazas Informáticas.html">Clasificación de las Amenazas Informáticas</a></li>
 				<li class="menu"><a href="Referencias Bibliográficas.html">Referencias Bibliográficas</a></li>
+				<li class="menu"><a href="Contacto.html">Contacto</a></li>
 			</ul>
 		</nav>
 
